--- a/partials/typography/fonts.hbs
+++ b/partials/typography/fonts.hbs
@@ -14,8 +14,8 @@
         font-family: "Source Serif 4";
         font-style: normal;
         font-weight: 400;
-        font-display: optional;
-        src: url("fonts/SourceSerif.woff2") format("woff2");
+        font-display: swap;
+        src: url({{asset "fonts/SourceSerif.woff2"}}) format("woff2");
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
             U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
@@ -24,8 +24,8 @@
         font-family: "Source Serif 4";
         font-style: normal;
         font-weight: 700;
-        font-display: optional;
-        src: url("fonts/SourceSerif-Bold.woff2") format("woff2");
+        font-display: swap;
+        src: url({{asset "fonts/SourceSerif-Bold.woff2"}}) format("woff2");
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
             U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
@@ -34,8 +34,8 @@
         font-family: "Source Serif 4";
         font-style: italic;
         font-weight: 400;
-        font-display: optional;
-        src: url("fonts/SourceSerif-It.woff2") format("woff2");
+        font-display: swap;
+        src: url({{asset "fonts/SourceSerif-It.woff2"}}) format("woff2");
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
             U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
@@ -44,8 +44,8 @@
         font-family: "Source Serif 4";
         font-style: italic;
         font-weight: 700;
-        font-display: optional;
-        src: url("fonts/SourceSerif-BoldIt.woff2") format("woff2");
+        font-display: swap;
+        src: url({{asset "fonts/SourceSerif-BoldIt.woff2"}}) format("woff2");
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
             U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
@@ -55,8 +55,8 @@
         font-family: "Roboto";
         font-style: normal;
         font-weight: 400;
-        font-display: optional;
-        src: url("fonts/Roboto.woff2") format("woff2");
+        font-display: swap;
+        src: url({{asset "fonts/Roboto.woff2"}}) format("woff2");
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
             U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
@@ -65,8 +65,8 @@
         font-family: "Roboto";
         font-style: italic;
         font-weight: 400;
-        font-display: optional;
-        src: url("fonts/Roboto-Italic.woff2") format("woff2");
+        font-display: swap;
+        src: url({{asset "fonts/Roboto-Italic.woff2"}}) format("woff2");
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
             U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
@@ -75,8 +75,8 @@
         font-family: "Roboto";
         font-style: normal;
         font-weight: 700;
-        font-display: optional;
-        src: url("fonts/Roboto-Bold.woff2") format("woff2");
+        font-display: swap;
+        src: url({{asset "fonts/Roboto-Bold.woff2"}}) format("woff2");
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
             U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
@@ -85,8 +85,8 @@
         font-family: "Roboto";
         font-style: italic;
         font-weight: 700;
-        font-display: optional;
-        src: url("fonts/Roboto-BoldItalic.woff2") format("woff2");
+        font-display: swap;
+        src: url({{asset "fonts/Roboto-BoldItalic.woff2"}}) format("woff2");
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
             U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
@@ -96,8 +96,8 @@
         font-family: "Source Code Pro";
         font-style: normal;
         font-weight: 400;
-        font-display: optional;
-        src: url("fonts/SourceCodePro.woff2") format("woff2");
+        font-display: swap;
+        src: url({{asset "fonts/SourceCodePro.woff2"}}) format("woff2");
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
             U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
@@ -107,8 +107,8 @@
         font-family: "Barlow Condensed";
         font-style: normal;
         font-weight: 500;
-        font-display: optional;
-        src: url("fonts/BarlowCondensed-Medium.woff2") format("woff2");
+        font-display: swap;
+        src: url({{asset "fonts/BarlowCondensed-Medium.woff2"}}) format("woff2");
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
             U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
