--- a/signup.hbs
+++ b/signup.hbs
@@ -50,7 +50,7 @@
         {{> "components/signup-card" plan="monthly"}}
         {{> "components/signup-card" plan="annual"}}
         {{> "components/signup-card" plan="founding"}}
-        {{> "components/signup-card" plan="none"}}
+        {{> "components/signup-card" plan="free"}}
       </section>
       <dialog class="gh-signup-popup">
         <button class="gh-close button-reset" type="reset">{{> "icons/close"}}</button>
