--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -237,6 +237,7 @@ h4,
 h5,
 h6 {
   font-family: var(--font-brand);
+  font-weight: 500;
 }
 
 a {
@@ -590,6 +591,7 @@ button.gh-form-input {
 
 .gh-navigation-logo {
   position: relative;
+  font-family: var(--font-sans) !important;
   font-weight: 400;
   font-size: calc(3rem * var(--factor, 1));
   white-space: nowrap;
@@ -1135,6 +1137,7 @@ Search                         LOGO                    Login Subscribe
 
 .gh-card-title {
   font-size: calc(1.9rem * var(--factor, 1));
+  font-weight: normal;
   letter-spacing: -0.014em;
   line-height: 1.3;
 }
@@ -1471,10 +1474,6 @@ a .gh-card-title {
   flex-direction: column;
 }
 
-.gh-header.is-highlight .gh-featured-feed .gh-card-title {
-  font-size: clamp(1.4rem, 0.23vw + 1.31rem, 1.6rem);
-}
-
 .gh-header.is-highlight .gh-header-left::after,
 .gh-header.is-highlight .gh-header-middle::after {
   position: absolute;
@@ -1739,7 +1738,7 @@ a .gh-card-title {
 .gh-featured-title {
   margin-bottom: 20px;
   padding-bottom: 12px;
-  font-size: 1.2rem;
+  font-size: 1.8rem;
   font-weight: 400;
   letter-spacing: 0.025em;
   text-transform: uppercase;
@@ -1786,7 +1785,7 @@ a .gh-card-title {
 }
 
 .gh-featured-feed .gh-card-title {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   font-weight: 400;
   letter-spacing: -0.011em;
 }
@@ -2295,6 +2294,7 @@ a .gh-card-title {
 }
 
 .gh-article-author-name {
+  font-family: var(--font-sans) !important;
   font-size: 1.6rem;
   font-weight: 400;
   letter-spacing: -0.013em;
@@ -2488,7 +2488,7 @@ unless a heading is the very first element in the post content */
 .has-serif-body:not([class*=" gh-font-body"]):not([class^="gh-font-body"]) .gh-content .kg-toggle-content > ol,
 .has-serif-body:not([class*=" gh-font-body"]):not([class^="gh-font-body"]) .gh-content .kg-toggle-content > ul,
 .has-serif-body:not([class*=" gh-font-body"]):not([class^="gh-font-body"]) .gh-content .kg-toggle-content > p {
-  font-family: var(--font-serif-alt);
+  font-family: var(--font-serif);
 }
 
 .gh-content :is(ul, ol) {
@@ -2573,10 +2573,32 @@ unless a heading is the very first element in the post content */
   font-family: var(--font-mono);
 }
 
+.gh-group-with-header,
+.group-with-image {
+  font-family: var(--font-serif);
+}
+
 .gh-group-with-header-body {
   border-left: 4px solid var(--color-accent-text);
   margin-top: 8px;
   padding-left: 20px;
+}
+
+.group-with-image {
+  display: flex;
+  column-gap: 2rem;
+}
+
+.group-with-image .group-with-image-image {
+  width: 10rem;
+  flex-shrink: 0;
+  padding-top: 1rem;
+}
+
+.group-with-image .group-with-image-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .voiceover-caption {
@@ -2680,6 +2702,11 @@ blockquote:not([class]) {
   padding-left: 2rem;
   border-left: 4px solid var(--color-dark-gray);
   font-size: 1.6rem;
+}
+
+blockquote blockquote:not([class]),
+.gh-group-with-header-body blockquote {
+  border-left: 0;
 }
 
 blockquote p:not(:first-child),
@@ -2819,7 +2846,7 @@ blockquote.kg-blockquote-alt cite {
 }
 
 .has-serif-body:not([class*=" gh-font-body"]):not([class^="gh-font-body"]) .kg-product-card-description :is(p, ul, ol) {
-  font-family: var(--font-serif-alt);
+  font-family: var(--font-serif);
 }
 
 /* File */
@@ -3000,39 +3027,6 @@ figcaption a {
 
 /* 20. Design settings
 /* ---------------------------------------------------------- */
-
-.has-serif-title:not([class*=" gh-font-heading"]):not([class^="gh-font-heading"]) {
-  --factor: 1.15;
-}
-
-.has-mono-title:not([class*=" gh-font-heading"]):not([class^="gh-font-heading"]) {
-  --factor: 1.1;
-}
-
-.has-sans-title:not([class*=" gh-font-heading"]):not([class^="gh-font-heading"])
-  :is(.is-title, .gh-content :is(h2, h3)) {
-  font-family: var(--font-brand);
-}
-
-.has-serif-title:not([class*=" gh-font-heading"]):not([class^="gh-font-heading"])
-  :is(.is-title, .gh-content :is(h2, h3)) {
-    font-family: var(--font-brand);
-  font-weight: 500;
-}
-
-.has-mono-title:not([class*=" gh-font-heading"]):not([class^="gh-font-heading"])
-  :is(.is-title, .gh-content :is(h2, h3)) {
-    font-family: var(--font-brand);
-}
-
-.has-sans-body:not([class*=" gh-font-body"]):not([class^="gh-font-body"]) .is-body {
-  font-family: var(--gh-font-body, var(--font-sans));
-}
-
-.has-serif-body:not([class*=" gh-font-body"]):not([class^="gh-font-body"]) .is-body {
-  font-family: var(--gh-font-body, var(--font-serif-alt));
-}
-
 .has-serif-title:not([class*=" gh-font-heading"]):not([class^="gh-font-heading"])
   .gh-header.is-classic
   .gh-header-title {
@@ -3048,28 +3042,6 @@ figcaption a {
 
 .has-serif-title:not([class*=" gh-font-heading"]):not([class^="gh-font-heading"]) .gh-form {
   border-radius: 0;
-}
-
-.has-serif-title:not([class*=" gh-font-heading"]):not([class^="gh-font-heading"]) .gh-card-title {
-  line-height: 1.15;
-  letter-spacing: -0.006em;
-  font-size: calc(2rem * var(--factor, 1));
-}
-
-.has-serif-title:not([class*=" gh-font-heading"]):not([class^="gh-font-heading"]) .gh-featured-feed .gh-card-title {
-  font-size: calc(1.6rem * var(--factor, 1));
-}
-
-.has-mono-title:not([class*=" gh-font-heading"]):not([class^="gh-font-heading"]) .gh-featured-feed .gh-card-title {
-  font-size: calc(1.5rem * var(--factor, 1));
-  letter-spacing: 0;
-}
-
-.has-serif-title:not([class*=" gh-font-heading"]):not([class^="gh-font-heading"])
-  .gh-header.is-highlight
-  .gh-featured-feed
-  .gh-card-title {
-  font-size: clamp(1.6rem, 0.23vw + 1.51rem, 1.8rem);
 }
 
 .has-mono-title:not([class*=" gh-font-heading"]):not([class^="gh-font-heading"]) .gh-card-title {
@@ -3198,7 +3170,7 @@ body[class*=" gh-font-heading"]:not(.gh-font-heading-fira-sans):not(.gh-font-hea
 
 .gh-footer-logo {
   position: relative;
-  font-family: font-family: var(--font-brand);
+  font-family: var(--font-brand);
   font-size: calc(2.4rem * var(--factor, 1));
   font-weight: 500;
   letter-spacing: -0.015em;
@@ -4176,7 +4148,8 @@ aside.active-sidenote {
   border: 1px dashed var(--color-dark-border);
 }
 
-.gh-image-credit {
+.gh-image-credit,
+.gh-post-post {
   font-size: 0.8em;
   font-style: italic;
 }
@@ -4360,7 +4333,8 @@ label[for="light"] svg {
 
 .kg-audio-player svg,
 .kg-audio-player button,
-.kg-audio-player input[type="range" i] {
+.kg-audio-player input[type="range" i],
+.kg-bookmark-content {
   color: var(--color-primary-text);
 }
 
